bugfix get user
